--- a/fragility.ipynb
+++ b/fragility.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2b5649ad",
+   "metadata": {},
+   "source": [
+    "# The Determinants of Corruption and State Fragility.\n",
+    "This is still a coding draft with limited comments on the codes and literature review. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fc0defb2",
+   "id": "194f1b23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1601eb41",
+   "id": "44ca6648",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7c11b0d5",
+   "id": "add92a4a",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "13bf59be",
+   "id": "b7e9e1d0",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d2d635ef",
+   "id": "57c1ae56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b434591e",
+   "id": "6d95c70f",
    "metadata": {},
    "source": [
     "### Exclude variables with many null values. I am choosing to drop variables with null values greater than 250"
@@ -89,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b4059400",
+   "id": "3c3d98d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "186cf01b",
+   "id": "1c56170b",
    "metadata": {
     "tags": []
    },
@@ -111,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "22a8506f",
+   "id": "7680ed42",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "631ccf37",
+   "id": "8d0c961b",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9f930f67",
+   "id": "eeef29f4",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b40f50c8",
+   "id": "fca73b51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "88e3f61a",
+   "id": "ac8f9f8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "63d9e0f5",
+   "id": "138ea17b",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5d01bc9f",
+   "id": "1a4d553f",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08b5cc08",
+   "id": "4fd2d471",
    "metadata": {},
    "source": [
     "### How to select if there are ANY null columns"
@@ -543,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b3b25f55",
+   "id": "ac36cdaf",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2d09fe",
+   "id": "9e2bb9c0",
    "metadata": {},
    "source": [
     "### Create a list of null columns"
@@ -588,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e4ef9ad8",
+   "id": "947578a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2bf0cd5",
+   "id": "31f197e5",
    "metadata": {},
    "source": [
     "### Get the number of null columns"
@@ -607,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8fa5cbcd",
+   "id": "0606f127",
    "metadata": {
     "tags": []
    },
@@ -630,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e7644516",
+   "id": "bc0558ba",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9b46eff4",
+   "id": "43fc889e",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959be08e",
+   "id": "a498d091",
    "metadata": {},
    "source": [
     "### Descriptive Statistics"
@@ -679,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ac60c6a9",
+   "id": "9f911e55",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a21066f1",
+   "id": "0e816715",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1cf59be8",
+   "id": "6b2356fb",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "89a9d620",
+   "id": "ee6abea3",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "35907e12",
+   "id": "c3eac8c9",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "16811223",
+   "id": "5db4a34d",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5942fc98",
+   "id": "9a7720d1",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2997bf1d",
+   "id": "39ccd045",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "51ac2bcb",
+   "id": "9d52bbbe",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "49c80dd1",
+   "id": "25cc2771",
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3183d58d",
+   "id": "7b289355",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e5407855",
+   "id": "f488e32c",
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "10dd242b",
+   "id": "2a7cd103",
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "98c5f9e0",
+   "id": "4a1d35f6",
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "882c6e8e",
+   "id": "d5a2c59c",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c90f1ce",
+   "id": "0103951d",
    "metadata": {},
    "source": [
     "### Data Preprocessing "
@@ -1785,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0d98eb6b",
+   "id": "43898a5e",
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "57b5a24b",
+   "id": "21f922b0",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2af4c689",
+   "id": "bcb48c72",
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9044fc11",
+   "id": "6839faa1",
    "metadata": {},
    "outputs": [],
    "source": []
